--- a/.env
+++ b/.env
@@ -11,4 +11,4 @@ NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET="YOUR_FIREBASE_STORAGE_BUCKET_HERE"
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID="YOUR_FIREBASE_MESSAGING_SENDER_ID_HERE"
 NEXT_PUBLIC_FIREBASE_APP_ID="YOUR_FIREBASE_APP_ID_HERE"
 GEMINI_API_KEY= "AIzaSyB8FZpVvn6RL1LkYaLi4YjxZz3yolavHfo"
-RESEND_API_KEY=
+RESEND_API_KEY=re_BPSx9WCJ_6oq42i3HZBnan3FzzzWricqF
