--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,36 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
+# Dependencies
 /node_modules
 /.pnp
 .pnp.js
 
-# testing
+# Testing
 /coverage
 
-# next.js
+# Next.js build output
 /.next/
 /out/
 
-# production
+# Production
 /build
 
-# misc
-.DS_Store
-*.pem
+# Vercel
+.vercel
 
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Turborepo
+.turbo
 
-# local env files
-.env.local
+# ESLint
+.eslintcache
+
+# Env files
+.env
+.env*.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-# Genkit prompts
-/prompts
+# TypeScript
+*.tsbuildinfo
+next-env.d.ts
