prompts should not be visitble as well

--- a/.env
+++ b/.env
@@ -11,4 +11,7 @@ NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET="YOUR_FIREBASE_STORAGE_BUCKET_HERE"
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID="YOUR_FIREBASE_MESSAGING_SENDER_ID_HERE"
 NEXT_PUBLIC_FIREBASE_APP_ID="YOUR_FIREBASE_APP_ID_HERE"
 GEMINI_API_KEY= "AIzaSyB8FZpVvn6RL1LkYaLi4YjxZz3yolavHfo"
-RESEND_API_KEY= "re_BPSx9WCJ_6oq42i3HZBnan3FzzzWricqF"
+RESEND_API_KEY=re_BPSx9WCJ_6oq42i3HZBnan3FzzzWricqF
+PROMPT_TRANSLATE_BATCH="\"\"\"You are an expert translation engine."
+EMAIL_SUBJECT_TEMPLATE="New Project Request from {{name}}"
+EMAIL_BODY_TEMPLATE="\"\"\"<div style=\"font-family: sans-serif; line-height: 1.6;\">"
