--- a/.env
+++ b/.env
@@ -14,4 +14,4 @@ GEMINI_API_KEY= "AIzaSyB8FZpVvn6RL1LkYaLi4YjxZz3yolavHfo"
 RESEND_API_KEY=re_BPSx9WCJ_6oq42i3HZBnan3FzzzWricqF
 PROMPT_TRANSLATE_BATCH="\"\"\"You are an expert translation engine."
 EMAIL_SUBJECT_TEMPLATE="New Project Request from {{name}}"
-EMAIL_BODY_TEMPLATE="\"\"\"<div style=\"font-family: sans-serif; line-height: 1.6;\">"
+EMAIL_BODY_TEMPLATE="\"\"\"<div style=\"font-family: sans-serif; line-height: 1.6;\">"5
