Integrate a fully functional language translation system that supports E

--- a/.env
+++ b/.env
@@ -12,6 +12,12 @@ NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID="YOUR_FIREBASE_MESSAGING_SENDER_ID_HERE
 NEXT_PUBLIC_FIREBASE_APP_ID="YOUR_FIREBASE_APP_ID_HERE"
 GEMINI_API_KEY= "AIzaSyB8FZpVvn6RL1LkYaLi4YjxZz3yolavHfo"
 RESEND_API_KEY=re_BPSx9WCJ_6oq42i3HZBnan3FzzzWricqF
-PROMPT_TRANSLATE_BATCH="\"\"\"You are an expert translation engine."
+PROMPT_TRANSLATE_BATCH="You are a professional, multilingual translation engine. Your task is to accurately translate a list of texts into the specified language while preserving their original meaning, nuance, and sentence structure. For each numbered text I provide, you must return a corresponding numbered and translated text. The output format MUST be a JSON object with a single key 'translations' which holds an array of strings. The array of translated strings MUST be in the same order as the input texts.
+
+Translate the following texts to: {{targetLanguage}}
+
+{{numberedTexts}}
+
+Provide ONLY the JSON object in your response."
 EMAIL_SUBJECT_TEMPLATE="New Project Request from {{name}}"
 EMAIL_BODY_TEMPLATE="A new project request has been submitted.<br><br><strong>Details:</strong><ul><li><strong>Name:</strong> {{name}}</li>{{email}}{{phone}}</ul><p><strong>Message:</strong><br>{{details}}</p>{{attachment}}<br><p>Order ID: {{orderId}}</p>"
