--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Google AI API Key (For server-side Genkit flows)
 # This key is kept private on the server.
-GOOGLE_GENAI_API_KEY="YOUR_GOOGLE_GENAI_API_KEY_HERE"
+GOOGLE_GENAI_API_KEY=
 
 # Firebase Configuration (For client-side access)
 # IMPORTANT: These must be prefixed with NEXT_PUBLIC_ to be accessible in the browser.
@@ -12,7 +12,9 @@ NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID="YOUR_FIREBASE_MESSAGING_SENDER_ID_HERE
 NEXT_PUBLIC_FIREBASE_APP_ID="YOUR_FIREBASE_APP_ID_HERE"
 GEMINI_API_KEY= "AIzaSyB8FZpVvn6RL1LkYaLi4YjxZz3yolavHfo"
 RESEND_API_KEY=re_BPSx9WCJ_6oq42i3HZBnan3FzzzWricqF
-PROMPT_TRANSLATE_BATCH="You are a professional, multilingual translation engine. Your task is to accurately translate a list of texts into the specified language while preserving their original meaning, nuance, and sentence structure. For each numbered text I provide, you must return a corresponding numbered and translated text. The output format MUST be a JSON object with a single key 'translations' which holds an array of strings. The array of translated strings MUST be in the same order as the input texts.
+PROMPT_TRANSLATE_BATCH="Translate the following numbered list of texts to {{targetLanguage}}. Maintain the exact numbering and order. Return ONLY the translated texts in a JSON object with a key 'translations' which is an array of strings. Do not add any extra explanation or introductory text.
+
+{{numberedTexts}}"
 
 Translate the following texts to: {{targetLanguage}}
 
